<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dip"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">
    <!--train-->

    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_weight="1"
        android:background="@color/fuxk_base_color_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@id/bottom_train"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@id/bottom_ico_train"
                android:layout_width="@dimen/bottom_icon_size"
                android:layout_height="@dimen/bottom_icon_size"
                android:src="@drawable/ic_question_answer_blue_24dp" />

            <TextView
                android:id="@id/bottom_txt_train"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_train"
                android:textColor="@color/blue_title"
                android:textSize="@dimen/bottom_txt_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/bottom_found"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@id/bottom_ico_found"
                android:layout_width="@dimen/bottom_icon_size"
                android:layout_height="@dimen/bottom_icon_size"
                android:src="@drawable/ic_home_gray_24dp" />

            <TextView
                android:id="@id/bottom_txt_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_found"
                android:textColor="@color/bottom_tab_normal"
                android:textSize="@dimen/bottom_txt_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/bottom_me"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@id/bottom_ico_me"
                android:layout_width="@dimen/bottom_icon_size"
                android:layout_height="@dimen/bottom_icon_size"
                android:src="@drawable/ic_person_gray_24dp" />

            <TextView
                android:id="@id/bottom_txt_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_me"
                android:textColor="@color/bottom_tab_normal"
                android:textSize="@dimen/bottom_txt_size" />
        </LinearLayout>
    </LinearLayout>

    <!--train-->
    <!--found-->
    <!--found-->
    <!--me-->
    <!--me-->


</LinearLayout>