<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_custom" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_fiber_new_black_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/news_detail_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="用户名" />

                    <TextView
                        android:id="@id/news_detail_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="时间"
                        android:textColor="@color/darkgrey"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

            <WebView
                android:id="@+id/web_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/new_detail_comment" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/aliceblue" />

            <com.zzz.wuye.widgets.ListViewWithScrollView
                android:id="@id/news_detail_comment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:listSelector="@color/transparent">

            </com.zzz.wuye.widgets.ListViewWithScrollView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@id/news_detail_add_commment_pane"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone">

        <EditText
            android:id="@id/news_detail_add_commment_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edit_text_round_bg"
            android:hint="@string/new_detail_add_comment_hint"
            android:paddingLeft="5dp" />

        <ImageView
            android:id="@id/news_detail_add_commment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message_send" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/aliceblue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/snow"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:id="@id/news_detail_add_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_alert_comment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/new_detail_add_comment" />
        </LinearLayout>

        <TextView
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/aliceblue" />

        <LinearLayout
            android:id="@id/news_detail_add_favor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_feed_is_fav" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/new_detail_add_favor" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>